--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <p>Hello World</p>
-    <script>
-        alert(1);
+    <script src="js/script.js">
+       
     </script>
 </body>
 
